@@ -1,5 +1,15 @@
 2008-02-20  Alexander Larsson  <alexl@redhat.com>
 
+        * common/gmountsource.[ch]:
+	Add ask_question support
+
+        * daemon/gvfsbackendsftp.c:
+	Handle host identity changed messages (#517460)
+
+	Patch from Carlos Garcia Campos
+
+2008-02-20  Alexander Larsson  <alexl@redhat.com>
+
         * daemon/Makefile.am:
         * daemon/gvfsbackendnetwork.[ch]:
         * daemon/network.mount.in: 
